Added DerivedText to ModelRun base class

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -442,38 +442,7 @@
     "        for l in self.li:\n",
     "            self.widgets.append(EditDict(l))\n",
     "        self._layout()\n",
-    "    \n",
-    "    def _layout(self):\n",
-    "        self.applayout = widgets.VBox([l.layout for l in self.widgets])\n",
     "        \n",
-    "    def _init_observe(self): \n",
-    "        for l in self.widgets:\n",
-    "            l.widget_only.observe(self._update_change, \"value\") \n",
-    "    \n",
-    "    def _update_change(self, change):\n",
-    "        self.li = []\n",
-    "        for l in self.widgets:\n",
-    "            self.li.append(l.di)\n",
-    "        \n",
-    "    def _lidi_display(self):\n",
-    "        out = [l.layout for l in self.widgets]\n",
-    "        self.applayout = widgets.VBox(out)\n",
-    "        display(self.applayout)\n",
-    "        for l in self.widgets:\n",
-    "            display(l.out)\n",
-    "            \n",
-    "    def _ipython_display_(self):\n",
-    "        self._lidi_display()  \n",
-    "\n",
-    "class EditListOfDictsModelRun(EditListOfDicts):\n",
-    "    \"\"\"\n",
-    "    Modified version of EditJson, for Model Run spreadsheet\n",
-    "    Functionality for DerivedText has been added\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    def __init__(self, li):\n",
-    "        super().__init__(li)\n",
-    "\n",
     "    def _update_label(self, index, l):\n",
     "        labelVal = \"\"\n",
     "        firstVal = True\n",
@@ -509,12 +478,27 @@
     "    \n",
     "    def _layout(self):\n",
     "        self._update_change(change=None)\n",
-    "        super()._layout()"
+    "        self.applayout = widgets.VBox([l.layout for l in self.widgets])\n",
+    "        \n",
+    "    def _init_observe(self): \n",
+    "        for l in self.widgets:\n",
+    "            l.widget_only.observe(self._update_change, \"value\") \n",
+    "        \n",
+    "    def _lidi_display(self):\n",
+    "        out = [l.layout for l in self.widgets]\n",
+    "        self.applayout = widgets.VBox(out)\n",
+    "        display(self.applayout)\n",
+    "        for l in self.widgets:\n",
+    "            display(l.out)\n",
+    "            \n",
+    "    def _ipython_display_(self):\n",
+    "        self._lidi_display()  \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -696,25 +680,12 @@
     "            \n",
     "    def _ipython_display_(self):\n",
     "        self.display()  \n",
-    "        #self._lidi_display()  \n",
-    "\n",
-    "class EditJsonModelRun(EditListOfDictsModelRun, EditJson):\n",
-    "    \"\"\"\n",
-    "    Modified version of EditJson, for Model Run spreadsheet\n",
-    "    Functionality for DerivedText has been added\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    def __init__(self, config):\n",
-    "        EditJson.__init__(self, config)\n",
-    "        \n",
-    "    def __build_widgets(self):\n",
-    "        EditListOfDictsModelRun.form()\n",
-    "        EditListOfDictsModelRun._init_observe()"
+    "        #self._lidi_display()  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +794,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4dc92b6758646b19d207733c51e7658",
+       "model_id": "86ec058ebdd8440ba1a09c2e137268d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -837,7 +808,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a465cf9c5143467abcaf0467a8afc675",
+       "model_id": "c02728d333da430e8f01cb31e52b09a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -851,7 +822,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff9684b635eb46b0ac84d668c0b89b44",
+       "model_id": "bf54c0134e334335a93adfaea6c9dd3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -865,7 +836,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a32acd66bfa942099cda67a176deced2",
+       "model_id": "99d09c9f49e54b3ca471a3cc2ac57349",
        "version_major": 2,
        "version_minor": 0
       },
@@ -879,7 +850,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90c8fe0eb35f4c6fa58070866232b6ad",
+       "model_id": "16bae103a8b54f63a96701a6d2c55d07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -893,7 +864,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af0b23d42fab4ee195cfe1ebbb5c042c",
+       "model_id": "9ac3e561186e48b79addf1fa4c33f8ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -907,7 +878,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b65838e64d8425f9b0e18aabbae7bf9",
+       "model_id": "975b336f56374901a2a453e387df50a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -921,7 +892,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f514d49902fc4517b8b2ac45aefd13d1",
+       "model_id": "bb88d31187944a33be7e72e3b5b857f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -935,7 +906,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d144e0bfda36416889ce3cb2a3d6d88e",
+       "model_id": "aa06a24b0725409dbcb6a529b6f221ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -995,7 +966,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f984c7c52e04882939d9f8cfc17809f",
+       "model_id": "b702568548d04ff5a6bc790e97494cfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1009,7 +980,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d518fb5dadaf44368cf9ff04c3d54b72",
+       "model_id": "b9606680768045b6ac9d32f9aa86ec34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1023,7 +994,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47d8a8fd2dc641dc9bdaff02f4f65525",
+       "model_id": "67734347859549a0991524e5c6a5397b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1037,7 +1008,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21a0a60e133d4cd88dbe591c3b9c9da3",
+       "model_id": "b1f9918b87944fd5ac9125de277609b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1051,7 +1022,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca6be03c83f34fee9633abb4c7c59d7d",
+       "model_id": "5db7e285a95d4ddda1f04576fd418b96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1065,7 +1036,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df477aaec6b94b44a2b674cdde05cd04",
+       "model_id": "c1ba21ad299f46c088c0919bafa01af5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1079,7 +1050,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d54d2e3a9fb4791a23e6ad062107898",
+       "model_id": "a82d25f73b5c4d6591e8ec81985d5d2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1093,7 +1064,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e2082ced2d14044a60682794e3027fc",
+       "model_id": "e4e3ad4ba40048d295d4d76d9ce5ec33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1107,7 +1078,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5312aa3c684842c38e135ce3ae9a57b8",
+       "model_id": "b1dd851ef795414e8ef431b48bbedc52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1121,7 +1092,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "537aa4f118f442f5a15122014f3435c0",
+       "model_id": "51c2cfc71e804dea9d896775651a567c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1135,7 +1106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12f5fef1a5e648048a982993340f8155",
+       "model_id": "17ce8e353ceb4785be0477aba70ee731",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1195,7 +1166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b21ac0c0dbc4ec18f4ecca7128bf2c6",
+       "model_id": "44c3a239d72c4dae95c4ae1e07a68a6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1209,7 +1180,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "305154b1092e4c35a62bb10822928356",
+       "model_id": "d7058b0510654c5a8f067448d8b3a2cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1223,7 +1194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04eb3d93450a4f30971f8230b1f8cf69",
+       "model_id": "8bcbe53b2c364dd385d2e21437c6568e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1283,7 +1254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bab68675fadc4b028fb4f2029cc58f49",
+       "model_id": "3f0ae0355375430c85300573af8f1354",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1297,7 +1268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56c7f715273c42f4a164d7531be19b71",
+       "model_id": "7d6007fb95f94564a3cd27d46d5a34ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1311,7 +1282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3949673e29e84f24b68dab91547488e0",
+       "model_id": "521920fc897146d39853665c015ed70c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1383,7 +1354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "205d87fac25b45c099369eed56424040",
+       "model_id": "aa0c1748f0ed40f4a59c349effae3782",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1397,7 +1368,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e711558fa5884555933d7d0a0f249a44",
+       "model_id": "1925e1ce075646f794cde869c3022f14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1411,7 +1382,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2529f7af828c4756a22d8e981eb0436a",
+       "model_id": "88faf5207ccc4e109239b6a26f2f6e27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1425,7 +1396,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9418de9ba6d74e538cde54fada14db85",
+       "model_id": "d79dd9d5222f4b09b7b2fed12766ab35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1439,7 +1410,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbc66a282b8d407d93a5b4da1cf2fd11",
+       "model_id": "2ff0b01b2d8d4eba96961e3ce06c7b89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1453,7 +1424,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4eb73e5999e94650ae6f408bce7ad39e",
+       "model_id": "8b0b883aae0444d5a3c64b24e2915c01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1467,7 +1438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecab55d993fa4be4a0ee3114085720c7",
+       "model_id": "2a1ddaea95fe42618266874e141eb579",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1527,7 +1498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c4a251b9a914586abb514668e014cfd",
+       "model_id": "938301c2d96f4ec58d6ce4fbeba6c207",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1541,7 +1512,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02ab8757a7cd4486b92482db81e3d0d7",
+       "model_id": "d01de21af30b49a488546291ad16e853",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1555,7 +1526,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a427acb1b1246d0ae166559ce548af8",
+       "model_id": "48ced510d26e4d8ab598d404a0c70d27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1615,7 +1586,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a3d9689b3464595be359ec0892d7c69",
+       "model_id": "4db3db5dd0ba4aa096098581a0c2a0fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1629,7 +1600,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fcd432338fc4cb686b836bea047ee95",
+       "model_id": "4a8f1e2b75c14bca95005b1d9634672d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1730,7 +1701,7 @@
     "    NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
     "    fpth = os.path.join(NBFDIR,r'appdata\\inputs\\test-derived-val.json')\n",
     "    li = read_json(fpth)\n",
-    "    g = EditListOfDictsModelRun(li)\n",
+    "    g = EditListOfDicts(li)\n",
     "    \n",
     "    display(Markdown('### Example4'))\n",
     "    display(Markdown('''Edit list of dicts iwth date picker and derived input'''))\n",
@@ -1746,7 +1717,7 @@
     "        'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\gbxml.py'),\n",
     "        'fdir':'.',\n",
     "        }\n",
-    "    editnestedjson = EditJsonModelRun(nestedconfig)\n",
+    "    editnestedjson = EditJson(nestedconfig)\n",
     "    # display\n",
     "    display(Markdown('### Example5'))\n",
     "    display(Markdown('''EDIT NESTED JSON FILE with custom config and file management'''))\n",
