--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -32,12 +32,12 @@
     "try:\n",
     "    from ipyrun._runconfig import RunConfig\n",
     "    from ipyrun._ipyeditcsv import EditCsv\n",
-    "    from ipyrun._ipyeditjson import EditJson, EditJsonModelRun\n",
+    "    from ipyrun._ipyeditjson import EditJson\n",
     "    from ipyrun._ipydisplayfile import DisplayFile, DisplayFiles\n",
     "except:\n",
     "    from _runconfig import RunConfig\n",
     "    from _ipyeditcsv import EditCsv\n",
-    "    from _ipyeditjson import EditJson, EditJsonModelRun\n",
+    "    from _ipyeditjson import EditJson\n",
     "    from _ipydisplayfile import DisplayFile, DisplayFiles\n",
     "\n",
     "def get_mfuser_initials():\n",
@@ -311,16 +311,6 @@
     "            \n",
     "    def _ipython_display_(self):\n",
     "        self.display()\n",
-    "\n",
-    "class RunAppModelRun(RunApp):\n",
-    "    \"\"\"\n",
-    "    Modified version of EditJson, for Model Run spreadsheet\n",
-    "    Functionality for DerivedText has been added\n",
-    "    \"\"\"\n",
-    "    def _edit_inputs(self, sender):\n",
-    "        with self.out:\n",
-    "            clear_output()\n",
-    "            display(EditJsonModelRun(self.config))\n",
     "    \n",
     "# IT WOULD BE GOOD TO ADD A PROGRESS BAR\n",
     "# i think this would require us to time how long it takes for a script to execute and use that \n",
@@ -633,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -666,7 +656,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc1c0f6fffe844e0a13e42523adbe7cd",
+       "model_id": "cd22f0104ab140858288b35d5c31b17f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -680,7 +670,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e93be56b9b14d6f8d89132863eb9371",
+       "model_id": "4b5d9d0a455245e2a0daf3397bffea9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -749,7 +739,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc624b36e8b348f0947a2c29a92db4e7",
+       "model_id": "d52203ebcf444076b1a03c1076152f6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -763,7 +753,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3a69e5457434156ae3e8e946fc0e470",
+       "model_id": "c046add2e10a4597818d247248c90385",
        "version_major": 2,
        "version_minor": 0
       },
@@ -853,7 +843,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7653e674c91f4433bffe09669fbfa6db",
+       "model_id": "07e1375d42464f3c8df60f63f6115e05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -867,7 +857,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01923475a406405daaf03891adbb5c9d",
+       "model_id": "a6e9d4453289458689dc4908d6679138",
        "version_major": 2,
        "version_minor": 0
       },
@@ -881,7 +871,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e999edc7ee794b34a91163efd807ed4b",
+       "model_id": "0cc42a3fa50c41d0a03b4ed8ff8baa07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -895,7 +885,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4002886b09746888fdf4a8cdaecbca5",
+       "model_id": "a3deda469c8949978f389b0e56eeadd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -909,7 +899,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "624d0d41a6704b20b11fa63a68f4e5ae",
+       "model_id": "43447477be31467f82d59012e8a097c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -923,7 +913,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "095181eb89784b6890a7ab87534bea84",
+       "model_id": "29caa5098d624e89bbf157708da5250c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -937,7 +927,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "589e2f7e49ff4fe79ba98793d90154ae",
+       "model_id": "2923a4209ec34987ad156719b72c290a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -951,7 +941,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "197671453d094aa1af381bd5cc91d65d",
+       "model_id": "5f66679af556442fb63f3d2bcef99ed1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1040,7 +1030,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "135f22bb49834eb9b6d622c73856436f",
+       "model_id": "aaf0ced809784c8ba518a030f3b1cff1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1054,7 +1044,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d66522aaaaa4269ad83161eaabd7b06",
+       "model_id": "4b2e16c2422648a8b8b19ff2c6d93850",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1068,7 +1058,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2946c611693743f0a692f7e218c1920b",
+       "model_id": "683722b588e94d99b810adbc1ca2efbc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1128,7 +1118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afc8ca0757af412ba25d4eafd917c185",
+       "model_id": "92c4af1bdead40b3b2ee7a7d39ff7580",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1142,7 +1132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19a758bee524406190c1782511f5b53c",
+       "model_id": "7029ab2729c5461ba5b2481c8aec4226",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1156,7 +1146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa8efd6eda574eca8e7552c77f07cab3",
+       "model_id": "b214becc43284f84bbcb7291a1358512",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1193,7 +1183,7 @@
     "            }\n",
     "        }    \n",
     "\n",
-    "    rjson = RunAppModelRun(config)  \n",
+    "    rjson = RunApp(config)  \n",
     "    display(Markdown('### Example1'))\n",
     "    display(Markdown('''default RunApp.'''))\n",
     "    display(rjson)\n",
@@ -1381,7 +1371,7 @@
     "        tmp['fpth_inputs'] = fpth_modelruninput\n",
     "        tmp['fdir_inputs'] = fdir_modelruninput\n",
     "        tmp.update({'process_name':process_name})\n",
-    "        batch.append({'app':RunAppModelRun,'config':tmp})\n",
+    "        batch.append({'app':RunApp,'config':tmp})\n",
     "        return batch\n",
     "    \n",
     "    if not os.path.exists(fdir_modelruninput):\n",
@@ -1399,17 +1389,7 @@
     "    runapps = RunAppsMruns(batch)  \n",
     "    display(Markdown('### Example5'))\n",
     "    display(Markdown('''Batch Run of RunApps, for ModelRun'''))\n",
-    "    display(runapps, display_id=True)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    display(runapps, display_id=True)"
    ]
   },
   {
